# Sat2Geo-Aarhus

./: .gitignore  DATASET.md  DATA_NOTICE.md  LICENSE  README.md  pyproject.toml  requirements.txt  sat2geo_gui.py
data/embeddings/: chip_ids.npy
data/index/: chips.sqlite
docs/: BUILDING_A_DATABASE.md  EXE.md
sat2geo/: __init__.py  cli.py  locator.py
scripts/: build_exe.ps1  build_faiss_index.py  chip_tiles.py  download_tiles.py  embed_tiles.py
